Got familiar following behavior working, and made more strides towards implementing Ship6

--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -282,8 +282,12 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Familiar@O-Projectile]
+Position          = (0, 0, -0.2)
+Rotation          = -90
+LifeTime          = -1.0
 ;O-Familiar Class Data
 Speed             = 0
+FramesBehind      = 20 ; The number of movement frames behind which the Familiar lags its associated ship.
 
 [BP-Familiar@BP-Projectile]
 Type              = box
@@ -291,6 +295,7 @@ Type              = box
 [O-FamiliarP1@O-Familiar]
 Graphic           = G-FamiliarP1
 Body              = B-FamiliarP1
+ChildList         = O-FamiliarGunP1
 
 [G-FamiliarP1@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Parts/cockpitBlue_1.png
@@ -305,13 +310,57 @@ CheckMask         = geometry # pilotP2
 [O-FamiliarP2@O-Familiar]
 Graphic           = G-FamiliarP2
 Body              = B-FamiliarP2
+ChildList         = O-FamiliarGunP2
 
 [G-FamiliarP2@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Parts/cockpitRed_1.png
+Flip              = y
 
 [B-FamiliarP2@B-Projectile]
 PartList          = BP-FamiliarP2
 
 [BP-FamiliarP2@BP-Familiar]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
+[O-Puppet@O-Projectile]
+Scale             = (2.0, 5.0, 1.0)
+Rotation          = 180
+LifeTime          = 0.5
+;O-Puppet Class Data
+Speed             = 0
+
+[G-Puppet@G-Projectile]
+Pivot             = bottom
+
+[BP-Puppet@BP-Projectile]
+Type              = box
+Solid             = false
+
+[O-PuppetP1@O-Puppet]
+Graphic           = G-PuppetP1
+Body              = B-PuppetP1
+
+[G-PuppetP1@G-Puppet]
+Texture           = SpaceShooterRedux/PNG/Effects/fire08.png
+
+[B-PuppetP1@B-Projectile]
+PartList          = BP-PuppetP1
+
+[BP-PuppetP1@BP-Puppet]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-PuppetP2@O-Puppet]
+Graphic           = G-PuppetP2
+Body              = B-PuppetP2
+
+[G-PuppetP2@G-Puppet]
+Texture           = SpaceShooterRedux/PNG/Effects/fire10.png
+
+[B-PuppetP2@B-Projectile]
+PartList          = BP-PuppetP2
+
+[BP-PuppetP2@BP-Puppet]
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
