--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -172,17 +172,17 @@ ClipSizeDownward  = 1
 WaveSizeNeutral   = 3
 WaveSizeUpward    = 1
 WaveSizeDownward  = 3
-WaveSizeSuper     = 24
+WaveSizeSuper     = 16
 NumWavesNeutral   = 1
-NumWavesUpward    = 20
+NumWavesUpward    = 60
 NumWavesDownward  = 1
 NumWavesSuper     = 1
 MaxCooldownNeutral   = 1.0
-MaxCooldownUpward    = 1.0
+MaxCooldownUpward    = 2.0
 MaxCooldownDownward  = 1.0
 MaxCooldownSuper     = 1.0 ; 120
 MaxWaveDelayNeutral  = 0.0
-MaxWaveDelayUpward   = 0.0
+MaxWaveDelayUpward   = 0.0000075
 MaxWaveDelayDownward = 0.0
 MaxWaveDelaySuper    = 0.0
 
@@ -263,6 +263,7 @@ MaxWaveDelayNeutral  = 0.0
 MaxWaveDelayUpward   = 0.0
 MaxWaveDelayDownward = 0.0
 MaxWaveDelaySuper    = 0.0
+MaxFamiliars         = 3
 
 [G-Ship6@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen3.png
@@ -386,6 +387,9 @@ Position          = (0.0, 0.0, 0.0)
 [O-TurretGun@O-Spawner]
 Position          = (0.0, -0.5, 0.0)
 
+[O-FamiliarGun@O-Spawner]
+Position          = (0.0, -0.5, 0.0)
+
 [O-NeutralGun1P1@O-NeutralGun]
 Spawner           = SP-LaserP1
 
@@ -462,25 +466,25 @@ Spawner           = SP-LaserWallP2
 Spawner           = SP-OrbP1
 
 [O-UpwardGun4P1@O-UpwardGun]
-Spawner           = SP-OrbP1
+Spawner           = SP-PuppetP1
 
 [O-DownwardGun4P1@O-DownwardGun]
 Spawner           = SP-BeamP1
 
 [O-SuperGun4P1@O-SuperGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-PuppetP1
 
 [O-NeutralGun4P2@O-NeutralGun]
 Spawner           = SP-OrbP2
 
 [O-UpwardGun4P2@O-UpwardGun]
-Spawner           = SP-OrbP2
+Spawner           = SP-PuppetP2
 
 [O-DownwardGun4P2@O-DownwardGun]
 Spawner           = SP-BeamP2
 
 [O-SuperGun4P2@O-SuperGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-PuppetP2
 
 [O-NeutralGun5P1@O-NeutralGun]
 Spawner           = SP-LaserP1
@@ -584,6 +588,12 @@ Spawner           = SP-TurretLaserP1
 [O-TurretGunP2@O-TurretGun]
 Spawner           = SP-TurretLaserP2
 
+[O-FamiliarGunP1@O-FamiliarGun]
+Spawner           = SP-FamiliarLaserP1
+
+[O-FamiliarGunP2@O-FamiliarGun]
+Spawner           = SP-FamiliarLaserP2
+
 ; Spawners
 
 [SP-LaserP1@SP-Spawner]
@@ -637,6 +647,12 @@ Object            = O-FamiliarP1
 [SP-FamiliarP2@SP-Spawner]
 Object            = O-FamiliarP2
 
+[SP-PuppetP1@SP-Spawner]
+Object            = O-PuppetP1
+
+[SP-PuppetP2@SP-Spawner]
+Object            = O-PuppetP2
+
 [SP-TurretLaser@SP-Spawner]
 CleanOnDelete    = false
 WaveSize         = 1
@@ -658,6 +674,29 @@ IgnoreFromParent = none
 Object           = O-LaserP1
 
 [SP-TurretLaserP2@SP-TurretLaser]
+Object           = O-LaserP2
+
+[SP-FamiliarLaser@SP-Spawner]
+CleanOnDelete    = false
+WaveSize         = 0
+WaveDelay        = 0
+Position         = (0.0, 0.0, 0.0)
+Rotation         = 0.0
+Scale            = (1.0, 1.0, 1.0)
+Interpolate      = false
+Immediate        = false
+UseAlpha         = false
+UseColor         = false
+UseRotation      = true
+UseScale         = false
+UseRelativeSpeed = false
+UseSelfAsParent  = false
+IgnoreFromParent = none
+
+[SP-FamiliarLaserP1@SP-FamiliarLaser]
+Object           = O-LaserP1
+
+[SP-FamiliarLaserP2@SP-FamiliarLaser]
 Object           = O-LaserP2
 
 ; Icons
