Roughly finished Ship6 implementation, though I still need to remove initial Familiar creation after sufficient testing, and I still have to set up Pilots to correctly collide with all projectile types.

--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -89,9 +89,9 @@ CheckMask         = geometry # pilotP1
 
 [O-LaserWall@O-Projectile]
 Rotation          = 90.0
-
 ;O-LaserWall Class Data
 Speed             = 450
+GrowthSpeed       = 1
 
 [BP-LaserWall@BP-Projectile]
 Type              = box
@@ -286,8 +286,8 @@ Position          = (0, 0, -0.2)
 Rotation          = -90
 LifeTime          = -1.0
 ;O-Familiar Class Data
-Speed             = 0
-FramesBehind      = 20 ; The number of movement frames behind which the Familiar lags its associated ship.
+Speed             = 800
+FramesBehind      = 10 ; The number of movement frames behind which the Familiar lags its associated ship.
 
 [BP-Familiar@BP-Projectile]
 Type              = box
@@ -364,3 +364,41 @@ PartList          = BP-PuppetP2
 [BP-PuppetP2@BP-Puppet]
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
+
+[O-Explosion@O-Projectile]
+LifeTime          = 2.0
+;O-Explosion Class Data
+Speed             = 0
+GrowthSpeed       = 3
+
+[BP-Explosion@BP-Projectile]
+Type              = sphere
+Solid             = false
+
+[O-ExplosionP1@O-Explosion]
+Graphic           = G-ExplosionP1
+Body              = B-ExplosionP1
+
+[G-ExplosionP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/ufoBlue.png
+
+[B-ExplosionP1@B-Projectile]
+PartList          = BP-ExplosionP1
+
+[BP-ExplosionP1@BP-Explosion]
+SelfFlags         = projectileP1
+CheckMask         = pilotP2
+
+[O-ExplosionP2@O-Explosion]
+Graphic           = G-ExplosionP2
+Body              = B-ExplosionP2
+
+[G-ExplosionP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/ufoRed.png
+
+[B-ExplosionP2@B-Projectile]
+PartList          = BP-ExplosionP2
+
+[BP-ExplosionP2@BP-Explosion]
+SelfFlags         = projectileP2
+CheckMask         = pilotP1
