--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -244,21 +244,21 @@ Graphic           = G-Ship6
 Rotation          = -90.0
 
 ;Class Data
-ClipSizeNeutral   = 1
-ClipSizeUpward    = 1
-ClipSizeDownward  = 2
+ClipSizeNeutral   = 3
+ClipSizeUpward    = 3
+ClipSizeDownward  = 3
 WaveSizeNeutral   = 1
 WaveSizeUpward    = 1
 WaveSizeDownward  = 1
-WaveSizeSuper     = 3
+WaveSizeSuper     = 1
 NumWavesNeutral   = 1
 NumWavesUpward    = 1
 NumWavesDownward  = 1
 NumWavesSuper     = 1
-MaxCooldownNeutral   = 0.5
-MaxCooldownUpward    = 1.0
-MaxCooldownDownward  = 0.5
-MaxCooldownSuper     = 1 ; 120.0
+MaxCooldownNeutral   = 0.25
+MaxCooldownUpward    = 0.0
+MaxCooldownDownward  = 0.0
+MaxCooldownSuper     = 0.0
 MaxWaveDelayNeutral  = 0.0
 MaxWaveDelayUpward   = 0.0
 MaxWaveDelayDownward = 0.0
