Completed rough implementation of Ship7

--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -36,7 +36,7 @@ PartList          = BP-LaserP1
 
 [BP-LaserP1@BP-Laser]
 SelfFlags         = projectileP1
-CheckMask         = geometry # space # pilotP2
+CheckMask         = geometry # space # pilotP2 # projectileP1
 
 [O-LaserP2@O-Laser]
 Graphic           = G-LaserP2
@@ -49,6 +49,37 @@ Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
 PartList          = BP-LaserP2
 
 [BP-LaserP2@BP-Laser]
+SelfFlags         = projectileP2
+CheckMask         = geometry # space # pilotP1 # projectileP2
+
+; Begin note: Once I have all of my actual textures in place (and they're oriented correctly from the outset), I can probably get rid of these two objects
+
+[O-LaserRotatedP1@O-LaserP1]
+Rotation          = 90.0
+
+[O-LaserRotatedP2@O-LaserP2]
+Rotation          = 90.0
+
+
+; End note
+
+[O-LaserPrismP1@O-LaserP1]
+Body              = B-LaserPrismP1
+
+[B-LaserPrismP1@B-LaserP1]
+PartList          = BP-LaserPrismP1
+
+[BP-LaserPrismP1@BP-LaserP1]
+SelfFlags         = projectileP1
+CheckMask         = geometry # space # pilotP2
+
+[O-LaserPrismP2@O-LaserP2]
+Body              = B-LaserPrismP2
+
+[B-LaserPrismP2@B-LaserP2]
+PartList          = BP-LaserPrismP2
+
+[BP-LaserPrismP2@BP-LaserP2]
 SelfFlags         = projectileP2
 CheckMask         = geometry # space # pilotP1
 
@@ -201,15 +232,22 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Prism@O-Projectile]
+Scale             = (0.5, 0.5)
+LifeTime          = 10.0
+FXList            = FX-Rotate
 ;O-Prism Class Data
 Speed             = 300
+RotationSpeed     = 2
+WaveSize          = 5
 
 [BP-Prism@BP-Projectile]
 Type              = box
+Restitution       = 1.0 ; A restitution of one to allow for "perfect" bouncing.
 
 [O-PrismP1@O-Prism]
 Graphic           = G-PrismP1
 Body              = B-PrismP1
+ChildList         = O-PrismGunP1
 
 [G-PrismP1@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Meteors/meteorGrey_big4.png
@@ -224,6 +262,50 @@ CheckMask         = geometry # pilotP2 # projectileP1
 [O-PrismP2@O-Prism]
 Graphic           = G-PrismP2
 Body              = B-PrismP2
+ChildList         = O-PrismGunP2
+
+[O-Spacer@O-Projectile]
+Scale             = (4.0, 2.0)
+LifeTime          = 20.0
+Flip              = y
+FXList            = FX-Rotate
+;O-Spacer Class Data
+Speed             = 200
+RotationSpeed     = 1.5
+
+[BP-Spacer@BP-Projectile]
+Type              = box
+Restitution       = 1.0 ; A restitution of one to allow for "perfect" bouncing.
+
+[O-SpacerP1@O-Spacer]
+Graphic           = G-SpacerP1
+Body              = B-SpacerP1
+ChildList         = O-SpacerGun1P1 # O-SpacerGun2P1 # O-SpacerGun3P1
+
+[G-SpacerP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Effects/fire14.png
+
+[B-SpacerP1@B-Projectile]
+PartList          = BP-SpacerP1
+
+[BP-SpacerP1@BP-Spacer]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-SpacerP2@O-Spacer]
+Graphic           = G-SpacerP2
+Body              = B-SpacerP2
+ChildList         = O-SpacerGun1P2 # O-SpacerGun2P2 # O-SpacerGun3P2
+
+[G-SpacerP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Effects/fire16.png
+
+[B-SpacerP2@B-Projectile]
+PartList          = BP-SpacerP2
+
+[BP-SpacerP2@BP-Spacer]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
 
 [G-PrismP2@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Meteors/meteorBrown_big4.png
