--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -284,25 +284,25 @@ Graphic           = G-Ship7
 Rotation          = -90.0
 
 ;Class Data
-ClipSizeNeutral   = 3
-ClipSizeUpward    = 1
-ClipSizeDownward  = 3
+ClipSizeNeutral   = 5
+ClipSizeUpward    = 2
+ClipSizeDownward  = 1
 WaveSizeNeutral   = 1
-WaveSizeUpward    = 1
-WaveSizeDownward  = 3
-WaveSizeSuper     = 5
+WaveSizeUpward    = 3
+WaveSizeDownward  = 1
+WaveSizeSuper     = 1
 NumWavesNeutral   = 1
 NumWavesUpward    = 1
 NumWavesDownward  = 1
-NumWavesSuper     = 5
-MaxCooldownNeutral   = 0.5
-MaxCooldownUpward    = 0.25
+NumWavesSuper     = 1
+MaxCooldownNeutral   = 0.25
+MaxCooldownUpward    = 0.5
 MaxCooldownDownward  = 0.5
 MaxCooldownSuper     = 1 ; 120.0
 MaxWaveDelayNeutral  = 0.0
 MaxWaveDelayUpward   = 0.0
 MaxWaveDelayDownward = 0.0
-MaxWaveDelaySuper    = 0.2
+MaxWaveDelaySuper    = 0.0
 
 [G-Ship7@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen4.png
@@ -389,6 +389,36 @@ Position          = (0.0, -0.5, 0.0)
 
 [O-FamiliarGun@O-Spawner]
 Position          = (0.0, -0.5, 0.0)
+
+[O-PrismGun@O-Spawner]
+Position          = (0.0, 0.0, 0.0)
+
+[O-SpacerGun1@O-Spawner]
+Position          = (0.5, 0.0, 0.0)
+
+[O-SpacerGun2@O-Spawner]
+Position          = (0.0, 0.5, 0.0)
+
+[O-SpacerGun3@O-Spawner]
+Position          = (-0.5, 0.0, 0.0)
+
+[O-SpacerGun1P1@O-SpacerGun1]
+Spawner           = SP-SpacerLaser1P1
+
+[O-SpacerGun2P1@O-SpacerGun2]
+Spawner           = SP-SpacerLaser2P1
+
+[O-SpacerGun3P1@O-SpacerGun3]
+Spawner           = SP-SpacerLaser3P1
+
+[O-SpacerGun1P2@O-SpacerGun1]
+Spawner           = SP-SpacerLaser1P2
+
+[O-SpacerGun2P2@O-SpacerGun2]
+Spawner           = SP-SpacerLaser2P2
+
+[O-SpacerGun3P2@O-SpacerGun3]
+Spawner           = SP-SpacerLaser3P2
 
 [O-NeutralGun1P1@O-NeutralGun]
 Spawner           = SP-LaserP1
@@ -544,7 +574,7 @@ Spawner           = SP-OrbP1
 Spawner           = SP-PrismP1
 
 [O-SuperGun7P1@O-SuperGun]
-Spawner           = SP-PrismP1
+Spawner           = SP-SpacerP1
 
 [O-NeutralGun7P2@O-NeutralGun]
 Spawner           = SP-LaserP2
@@ -556,7 +586,7 @@ Spawner           = SP-OrbP2
 Spawner           = SP-PrismP2
 
 [O-SuperGun7P2@O-SuperGun]
-Spawner           = SP-PrismP2
+Spawner           = SP-SpacerP2
 
 [O-NeutralGun8P1@O-NeutralGun]
 Spawner           = SP-BeamP1
@@ -594,110 +624,11 @@ Spawner           = SP-FamiliarLaserP1
 [O-FamiliarGunP2@O-FamiliarGun]
 Spawner           = SP-FamiliarLaserP2
 
-; Spawners
+[O-PrismGunP1@O-PrismGun]
+Spawner           = SP-PrismLaserP1
 
-[SP-LaserP1@SP-Spawner]
-Object            = O-LaserP1
-
-[SP-LaserP2@SP-Spawner]
-Object            = O-LaserP2
-
-[SP-LaserHeatseekingP1@SP-Spawner]
-Object            = O-LaserHeatseekingP1
-
-[SP-LaserHeatseekingP2@SP-Spawner]
-Object            = O-LaserHeatseekingP2
-
-[SP-LaserWallP1@SP-Spawner]
-Object            = O-LaserWallP1
-
-[SP-LaserWallP2@SP-Spawner]
-Object            = O-LaserWallP2
-
-[SP-OrbP1@SP-Spawner]
-Object            = O-OrbP1
-
-[SP-OrbP2@SP-Spawner]
-Object            = O-OrbP2
-
-[SP-PrismP1@SP-Spawner]
-Object            = O-PrismP1
-
-[SP-PrismP2@SP-Spawner]
-Object            = O-PrismP2
-
-[SP-TurretP1@SP-Spawner]
-Object            = O-TurretP1
-
-[SP-TurretP2@SP-Spawner]
-Object            = O-TurretP2
-
-[SP-Beam@SP-Spawner]
-UseSelfAsParent   = true
-
-[SP-BeamP1@SP-Beam]
-Object            = O-BeamP1
-
-[SP-BeamP2@SP-Beam]
-Object            = O-BeamP2
-
-[SP-FamiliarP1@SP-Spawner]
-Object            = O-FamiliarP1
-
-[SP-FamiliarP2@SP-Spawner]
-Object            = O-FamiliarP2
-
-[SP-PuppetP1@SP-Spawner]
-Object            = O-PuppetP1
-
-[SP-PuppetP2@SP-Spawner]
-Object            = O-PuppetP2
-
-[SP-TurretLaser@SP-Spawner]
-CleanOnDelete    = false
-WaveSize         = 1
-WaveDelay        = 0.5
-Position         = (0.0, 0.0, 0.0)
-Rotation         = 0.0
-Scale            = (1.0, 1.0, 1.0)
-Interpolate      = false
-Immediate        = false
-UseAlpha         = false
-UseColor         = false
-UseRotation      = true
-UseScale         = false
-UseRelativeSpeed = false
-UseSelfAsParent  = false
-IgnoreFromParent = none
-
-[SP-TurretLaserP1@SP-TurretLaser]
-Object           = O-LaserP1
-
-[SP-TurretLaserP2@SP-TurretLaser]
-Object           = O-LaserP2
-
-[SP-FamiliarLaser@SP-Spawner]
-CleanOnDelete    = false
-WaveSize         = 0
-WaveDelay        = 0
-Position         = (0.0, 0.0, 0.0)
-Rotation         = 0.0
-Scale            = (1.0, 1.0, 1.0)
-Interpolate      = false
-Immediate        = false
-UseAlpha         = false
-UseColor         = false
-UseRotation      = true
-UseScale         = false
-UseRelativeSpeed = false
-UseSelfAsParent  = false
-IgnoreFromParent = none
-
-[SP-FamiliarLaserP1@SP-FamiliarLaser]
-Object           = O-LaserP1
-
-[SP-FamiliarLaserP2@SP-FamiliarLaser]
-Object           = O-LaserP2
+[O-PrismGunP2@O-PrismGun]
+Spawner           = SP-PrismLaserP2
 
 ; Icons
 
