--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -1,6 +1,7 @@
 ; Includes
 
 @../data/config/Arena.ini@
+@../data/config/FX.ini@
 @../data/config/Geometry.ini@
 @../data/config/LaserPortal.ini@
 @../data/config/Menu.ini@
@@ -9,6 +10,7 @@
 @../data/config/Projectile.ini@
 @../data/config/Shader.ini@
 @../data/config/Ship.ini@
+@../data/config/Spawner.ini@
 @../data/config/UI.ini@
 
 ; Main Settings
