Implemented most of the Ship5 behavior, though I still have to finish the grounded neutral attack and super.

--- a/data/config/FX.ini
+++ b/data/config/FX.ini
@@ -10,3 +10,16 @@ StartTime        = 0.0
 EndTime          = 2.0
 StartValue       = 0.0
 EndValue         = 359.0
+
+[FX-RotateQuad]
+SlotList         = FXS-RotateQuad
+KeepInCache      = true
+Loop             = true
+
+[FXS-RotateQuad]
+Type             = rotation
+Curve            = sine
+StartTime        = 0.0
+EndTime          = 1.0
+StartValue       = 0.0
+EndValue         = 90.0
