--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -1,6 +1,7 @@
 ; Includes
 
 @../data/config/Arena.ini@
+@../data/config/Crosshairs.ini@
 @../data/config/FX.ini@
 @../data/config/Geometry.ini@
 @../data/config/Icon.ini@
