--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -483,13 +483,13 @@ JumpDuration         = 0.45
 DashDuration         = 0.1
 ParryDuration        = 0.8
 MeleeDuration        = 0.5
-MaxDashes            = 3
+MaxDashes            = 2
 MaxLives             = 3
 MaxCooldownDash      = 2.0
 MaxCooldownParry     = 1.0
 MaxCooldownMelee     = 1.0
-ClipSizeNeutral   = 5
-ClipSizeUpward    = 2
+ClipSizeNeutral   = 1
+ClipSizeUpward    = 1
 ClipSizeDownward  = 1
 WaveSizeNeutral   = 1
 WaveSizeUpward    = 3
@@ -497,7 +497,7 @@ WaveSizeDownward  = 1
 WaveSizeSuper     = 1
 NumWavesNeutral   = 1
 NumWavesUpward    = 1
-NumWavesDownward  = 1
+NumWavesDownward  = 16
 NumWavesSuper     = 1
 MaxCooldownNeutral   = 0.25
 MaxCooldownUpward    = 0.5
@@ -507,6 +507,7 @@ MaxWaveDelayNeutral  = 0.0
 MaxWaveDelayUpward   = 0.0
 MaxWaveDelayDownward = 0.0
 MaxWaveDelaySuper    = 0.0
+ShipPoundSpeed       = 2000.0
 
 [G-Pilot5@G-Pilot]
 Texture           = soldier_full.png
