--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -255,6 +255,94 @@ PartList          = BP-OrbP2
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
+[O-MedussaHead@O-Projectile]
+Rotation          = -135.0 ; default rotation of -135 so as to facilitate use of sinusoidal FX without jittering resulting from a start value other than 0
+LifeTime          = 10.0
+FXList            = FX-RotateQuad
+; O-MedussaHead Class Data
+Speed             = 600
+SwaySpeed         = 50
+MaxSwayTime       = 1.5
+
+[B-MedussaHead@B-Projectile]
+
+[BP-MedussaHead@BP-Projectile]
+Type              = box
+Solid             = false
+
+[O-MedussaHeadP1@O-MedussaHead]
+Graphic           = G-MedussaHeadP1
+Body              = B-MedussaHeadP1
+
+[G-MedussaHeadP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/powerupBlue.png
+
+[B-MedussaHeadP1@B-MedussaHead]
+PartList          = BP-MedussaHeadP1
+
+[BP-MedussaHeadP1@BP-MedussaHead]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-MedussaHeadP2@O-MedussaHead]
+Graphic           = G-MedussaHeadP2
+Body              = B-MedussaHeadP2
+
+[G-MedussaHeadP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/powerupRed.png
+
+[B-MedussaHeadP2@B-MedussaHead]
+PartList          = BP-MedussaHeadP2
+
+[BP-MedussaHeadP2@BP-MedussaHead]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
+[O-Grenade@O-Projectile]
+Scale             = (1.5, 1.5)
+Rotation          = 0~359
+FXList            = FX-Rotate
+; O-Grenade Class Data
+Speed             = 750
+NumShrapnel       = 3
+
+[B-Grenade@B-Projectile]
+CustomGravity     = (0, 1000, 0)
+
+[BP-Grenade@BP-Projectile]
+Type              = sphere
+Solid             = false
+
+[O-GrenadeP1@O-Grenade]
+Graphic           = G-GrenadeP1
+Body              = B-GrenadeP1
+ChildList         = O-GrenadeGunP1
+
+[G-GrenadeP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/pill_blue.png
+
+[B-GrenadeP1@B-Grenade]
+PartList          = BP-GrenadeP1
+
+[BP-GrenadeP1@BP-Grenade]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-GrenadeP2@O-Grenade]
+Graphic           = G-GrenadeP2
+Body              = B-GrenadeP2
+ChildList         = O-GrenadeGunP2
+
+[G-GrenadeP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/pill_red.png
+
+[B-GrenadeP2@B-Grenade]
+PartList          = BP-GrenadeP2
+
+[BP-GrenadeP2@BP-Grenade]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
 [O-Turret@O-Projectile]
 Scale             = (0.5, 0.5, 1.0)
 ;O-Turret Class Data
@@ -509,6 +597,49 @@ PartList          = BP-PuppetP2
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
+[O-Shrapnel@O-Projectile]
+Scale             = (0.25, 0.25)
+Rotation          = 0.0~360.0
+LifeTime          = 5.0
+FXList            = FX-Rotate
+; O-Shrapnel Class Data
+Speed             = 300
+
+[B-Shrapnel@B-Projectile]
+CustomGravity     = (0, 400, 0)
+
+[BP-Shrapnel@BP-Projectile]
+Type              = box
+Solid             = false
+
+[O-ShrapnelP1@O-Shrapnel]
+Graphic           = G-ShrapnelP1
+Body              = B-ShrapnelP1
+
+[G-ShrapnelP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Parts/wingBlue_2.png
+
+[B-ShrapnelP1@B-Shrapnel]
+PartList          = BP-ShrapnelP1
+
+[BP-ShrapnelP1@BP-Shrapnel]
+SelfFlags         = projectileP1
+CheckMask         = pilotP2
+
+[O-ShrapnelP2@O-Shrapnel]
+Graphic           = G-ShrapnelP2
+Body              = B-ShrapnelP2
+
+[G-ShrapnelP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Parts/wingRed_0.png
+
+[B-ShrapnelP2@B-Shrapnel]
+PartList          = BP-ShrapnelP2
+
+[BP-ShrapnelP2@BP-Shrapnel]
+SelfFlags         = projectileP2
+CheckMask         = pilotP1
+
 [O-Explosion@O-Projectile]
 LifeTime          = 2.0
 ;O-Explosion Class Data
@@ -553,7 +684,7 @@ LifeTime          = 20.0
 Speed             = 0
 FallSpeed         = 50
 SwaySpeed         = 50
-MaxSwayTime   = 1.5
+MaxSwayTime       = 1.5
 
 [B-Ember@B-Projectile]
 ;CustomGravity     = (0.0, 100.0, 0.0)
@@ -587,5 +718,44 @@ Texture           = SpaceShooterRedux/PNG/Meteors/meteorBrown_small2.png
 PartList          = BP-EmberP2
 
 [BP-EmberP2@BP-Ember]
+SelfFlags         = projectileP2
+CheckMask         = pilotP1
+
+[O-Shockwave@O-Projectile]
+LifeTime          = 0.25
+;O-Shockwave Class Data
+Speed             = 200
+
+[B-Shockwave@B-Projectile]
+
+[BP-Shockwave@BP-Projectile]
+Type              = sphere
+Solid             = false
+
+[O-ShockwaveP1@O-Shockwave]
+Graphic           = G-ShockwaveP1
+Body              = B-ShockwaveP1
+
+[G-ShockwaveP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Meteors/meteorGrey_small2.png
+
+[B-ShockwaveP1@B-Shockwave]
+PartList          = BP-ShockwaveP1
+
+[BP-ShockwaveP1@BP-Shockwave]
+SelfFlags         = projectileP1
+CheckMask         = pilotP2
+
+[O-ShockwaveP2@O-Shockwave]
+Graphic           = G-ShockwaveP2
+Body              = B-ShockwaveP2
+
+[G-ShockwaveP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Meteors/meteorBrown_small2.png
+
+[B-ShockwaveP2@B-Shockwave]
+PartList          = BP-ShockwaveP2
+
+[BP-ShockwaveP1@BP-Shockwave]
 SelfFlags         = projectileP2
 CheckMask         = pilotP1
