--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -31,6 +31,27 @@ Object            = O-OrbP1
 [SP-OrbP2@SP-Spawner]
 Object            = O-OrbP2
 
+[SP-MedussaHeadP1@SP-Spawner]
+Object            = O-MedussaHeadP1
+
+[SP-MedussaHeadP2@SP-Spawner]
+Object            = O-MedussaHeadP2
+
+[SP-GrenadeP1@SP-Spawner]
+Object            = O-GrenadeP1
+
+[SP-GrenadeP2@SP-Spawner]
+Object            = O-GrenadeP2
+
+[SP-Shrapnel@SP-Spawner]
+CleanOnDelete     = false
+
+[SP-ShrapnelP1@SP-Shrapnel]
+Object            = O-ShrapnelP1
+
+[SP-ShrapnelP2@SP-Shrapnel]
+Object            = O-ShrapnelP2
+
 [SP-Prism@SP-Spawner]
 UseRotation       = false
 
@@ -244,6 +265,9 @@ Position          = (0.5, 0.0, 0.0)
 [O-SuperGun@O-Gun]
 Position          = (0.0, 0.0, 0.0)
 
+[O-GrenadeGun@O-Spawner]
+Position          = (0.0, 0.0, 0.0)
+
 [O-TurretGun@O-Spawner]
 Position          = (0.0, -0.5, 0.0)
 
@@ -377,10 +401,10 @@ Spawner           = SP-BeamP2
 Spawner           = SP-PuppetP2
 
 [O-NeutralGun5P1@O-NeutralGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-MedussaHeadP1
 
 [O-UpwardGun5P1@O-UpwardGun]
-Spawner           = SP-OrbP1
+Spawner           = SP-GrenadeP1
 
 [O-DownwardGun5P1@O-DownwardGun]
 Spawner           = SP-LaserP1
@@ -389,10 +413,10 @@ Spawner           = SP-LaserP1
 Spawner           = SP-LaserP1
 
 [O-NeutralGun5P2@O-NeutralGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-MedussaHeadP2
 
 [O-UpwardGun5P2@O-UpwardGun]
-Spawner           = SP-OrbP2
+Spawner           = SP-GrenadeP2
 
 [O-DownwardGun5P2@O-DownwardGun]
 Spawner           = SP-LaserP2
@@ -477,6 +501,12 @@ Spawner           = SP-TurretLaserP1
 
 [O-TurretGunP2@O-TurretGun]
 Spawner           = SP-TurretLaserP2
+
+[O-GrenadeGunP1@O-GrenadeGun]
+Spawner           = SP-ShrapnelP1
+
+[O-GrenadeGunP2@O-GrenadeGun]
+Spawner           = SP-ShrapnelP2
 
 [O-FamiliarGunP1@O-FamiliarGun]
 Spawner           = SP-FamiliarLaserP1
