Roughly finished all ship behaviors

--- a/data/config/Crosshairs.ini
+++ b/data/config/Crosshairs.ini
@@ -1,8 +1,10 @@
 [O-Crosshairs]
+Position          = (0.0, 0.0, -0.1)
 LifeTime          = 10.0
 ; O-Crosshairs Class Data
 Speed             = 400
 DecelerationDistance  = 20.0
+MaxMissileSpawnInterval = 1.0
 
 [G-Crosshairs]
 Pivot             = center
