--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -298,6 +298,46 @@ PartList          = BP-MedussaHeadP2
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
+[O-Missile@O-Projectile]
+LifeTime          = 10.0
+; O-Missile Class Data
+Speed             = 1000
+FiringDirection   = (0, 0)
+
+[B-Missile@B-Projectile]
+
+[BP-Missile@BP-Projectile]
+Type              = box
+Solid             = false
+
+[O-MissileP1@O-Missile]
+Graphic           = G-MissileP1
+Body              = B-MissileP1
+
+[G-MissileP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/powerupBlue.png
+
+[B-MissileP1@B-Missile]
+PartList          = BP-MissileP1
+
+[BP-MissileP1@BP-Missile]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-MissileP2@O-Missile]
+Graphic           = G-MissileP2
+Body              = B-MissileP2
+
+[G-MissileP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/powerupRed.png
+
+[B-MissileP2@B-Missile]
+PartList          = BP-MissileP2
+
+[BP-MissileP2@BP-Missile]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
 [O-Grenade@O-Projectile]
 Scale             = (1.5, 1.5)
 Rotation          = 0~359
@@ -639,6 +679,45 @@ PartList          = BP-ShrapnelP2
 [BP-ShrapnelP2@BP-Shrapnel]
 SelfFlags         = projectileP2
 CheckMask         = pilotP1
+
+[O-MissileShield@O-Projectile]
+Position          = (0.0, 0.0, 0.1)
+Scale             = (6.0, 6.0)
+; O-MissileShield Class Data
+Speed             = 200
+MaxMissileSpawnInterval = 0.1
+
+[BP-MissileShield@BP-Projectile]
+Type              = box
+Solid             = false
+
+[O-MissileShieldP1@O-MissileShield]
+Graphic           = G-MissileShieldP1
+Body              = B-MissileShieldP1
+
+[G-MissileShieldP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/powerupRed_shield.png
+
+[B-MissileShieldP1@B-Projectile]
+PartList          = BP-MissileShieldP1
+
+[BP-MissileShieldP1@BP-MissileShield]
+SelfFlags         = projectileP2
+CheckMask         = geometry # space # pilotP2
+
+[O-MissileShieldP2@O-MissileShield]
+Graphic           = G-MissileShieldP2
+Body              = B-MissileShieldP2
+
+[G-MissileShieldP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Power-ups/powerupBlue_shield.png
+
+[B-MissileShieldP2@B-Projectile]
+PartList          = BP-MissileShieldP2
+
+[BP-MissileShieldP2@BP-MissileShield]
+SelfFlags         = projectileP1
+CheckMask         = geometry # space # pilotP1
 
 [O-Explosion@O-Projectile]
 LifeTime          = 2.0
