--- a/data/config/Partition.ini
+++ b/data/config/Partition.ini
@@ -16,4 +16,4 @@ Dynamic           = false
 Type              = box
 Solid             = false
 SelfFlags         = space
-CheckMask         = pilotP1 # pilotP2
+CheckMask         = projectileP1 # projectileP2 # pilotP1 # pilotP2
