Did a lot of refactoring, got all collisions and parrying working, added iFrames for Pilot, but have yet to implement a visual indicator of these iFrames.

--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -1,6 +1,8 @@
 [O-Pilot]
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 AnimationSet      = AS-Pilot
+;O-Pilot Class Data
+MaxIFrames           = 1.0
 
 [G-Pilot]
 Pivot             = center
