--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -1,3 +1,6 @@
+[O-Spawner]
+UseParentSpace    = position
+
 [SP-Spawner]
 CleanOnDelete     = true ; Enforces the destruction of spawned objects upon that of their spawner.
 
