Implemented TimelineTrack which makes a Pilot intermittently flash for the duration of its iFrames

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -13,6 +13,7 @@
 @../data/config/Shader.ini@
 @../data/config/Ship.ini@
 @../data/config/Spawner.ini@
+@../data/config/TimelineTrack.ini@
 @../data/config/UI.ini@
 
 ; Main Settings
