--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -2,7 +2,8 @@
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 AnimationSet      = AS-Pilot
 ;O-Pilot Class Data
-MaxIFrames           = 1.0
+MaxIFrames           = 1.0 ; Ensure that this value is equal to @TT-IFramesFlash duration / 60.
+IFrameFlashInterval  = 0.1
 
 [G-Pilot]
 Pivot             = center
