--- a/data/config/Shader.ini
+++ b/data/config/Shader.ini
@@ -80,3 +80,21 @@ BorderThicknessX      = 0.0005
 BorderThicknessY      = 0.0005
 BorderColorStart      = (0.0, 1.0, 1.0) ; cyan
 BorderColorEnd        = (0.0, 0.0, 1.0) ; blue
+
+[SH-Color]
+ParamList         = texture # Color
+UseCustomParam    = true
+Code              = "
+
+void main() {
+    vec2 p = gl_TexCoord[0].xy;
+    vec4 textureCol = texture2D(texture, p);
+ 
+    gl_FragColor.r = Color.r;
+    gl_FragColor.g = Color.g;
+    gl_FragColor.b = Color.b;
+    gl_FragColor.a = textureCol.a;
+}"
+
+[SH-ColorWhite@SH-Color]
+Color             = (1.0, 1.0, 1.0)
