Fixed bug with Crosshairs resulting in null pointer exception, and made first steps towards replacing code based menu structures with entirely config based scene handling.

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -10,6 +10,7 @@
 @../data/config/Partition.ini@
 @../data/config/Pilot.ini@
 @../data/config/Projectile.ini@
+@../data/config/Scene.ini@
 @../data/config/Shader.ini@
 @../data/config/Ship.ini@
 @../data/config/Spawner.ini@
